--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
 .App {
-  text-align: center;
+    text-align: center;
+}
+
+.app-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.app {
+    background: #209cee;
+    height: 100vh;
+    padding: 30px;
+}
+
+.todo-list {
+    background: #e8e8e8;
+    border-radius: 4px;
+    max-width: 400px;
+    padding: 5px;
+}
+
+.todo {
+    align-items: center;
+    background: #fff;
+    border-radius: 3px;
+    box-shadow: 2px 1px 3px 2px rgb(0 0 0 / 15%);
+    display: flex;
+    font-size: 12px;
+    justify-content: space-between;
+    margin-bottom: 6px;
+    padding: 3px 10px;
+    padding: 8px;
+    font-size: 14px;
+    width: 450px;
+}
+
+.delete-todo {
+    color: red;
+    margin-right: 10px;
+    background-color: rgba(255, 27, 27, 0.255);
+    border: none;
+    padding: 5px;
+    border: 1px solid red;
+}
+
+form {
+    display: flex;
+    justify-content: flex-start;
+}
+
+form>input {
+    width: 300px;
+    margin: 0;
+    padding: 8px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+
+.edit-todo,
+.get-posts {
+    background-color: rgb(0, 36, 128);
+    color: #fff;
+    border: none;
+    padding: 5px;
+}
+
+.fetched-part {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center
+}
+
+.deleted-todo {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
 }
