--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,22 @@ form>input {
     opacity: 0;
     transition: opacity 500ms ease-in;
 }
+
+span.count-of-todos {
+    position: relative;
+    top: 20px;
+    z-index: -1;
+    border: 1px solid rgb(85, 85, 85);
+    padding: 10px 15px;
+    border-radius: 10px;
+}
+
+.active-todo {
+    margin-left: 10px;
+    background-color: green;
+    padding: 5px;
+}
+
+.active-todo-bg {
+    background-color: rgba(118, 193, 123, 0.3);
+}
