--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@
 
 .header__list {
     display: flex;
+    width: 100%;
 }
 
 .header {
@@ -21,4 +22,8 @@
     background-color: rgb(30, 83, 207);
     color: #fff;
     padding: 10px;
+}
+
+.logout {
+    margin-left: auto;
 }
